--- a/index.html
+++ b/index.html
@@ -30,9 +30,26 @@
 
         </li>
         <li>Está pronto um omelete delicioso, bom apetite!
-   
+
     </ol>
-    
+    <h1>Preparo de crepioca</h1>
+    <img src="crepioca.jpeg" alt="Imagem da crepioca" width="300">
+    <h2>Modo de Preparo</h2>
+    <ol>
+        <li>Em um recipiente, bata bem o ovo.
+        <li>Adicione a goma de tapioca e bata novamente (pode bater com um garfo mesmo), até obter uma mistura
+            homogênea.
+
+        <li>Coloque todo o conteúdo em uma frigideira antiaderente levemente quente e mantenha em fogo baixo.
+
+
+
+        </li>Deixe por alguns segundos e vire para dourar do outro lado.
+
+
+        <li>Não é necessário untar com óleo, azeite ou manteiga.
+
+
 </body>
 
 </html>
